--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- Removed favicon link that causes issues with Electron file:// protocol -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shopping for AIgolia personalized</title>
+    <title>Shopping for Algolia personalized</title>
     <style>
       body {
         margin: 0;
